Fixed layout issues

--- a/apps/client/src/pages/admin/DashboardPage/AdminDashboard.module.css
+++ b/apps/client/src/pages/admin/DashboardPage/AdminDashboard.module.css
@@ -3,7 +3,6 @@
 }
 
 .pageWrapper {
-    margin-left: 82px;
     width: 79%;
 }
 
